--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Desactivar MENU Facturacion/Proveedores/Facturas -->
+    <record model="ir.ui.menu" id="account.menu_action_move_in_invoice_type">
+        <field name="active" eval="False"/>
+    </record>
 
+    <!-- MENU Facturacion/Proveedores/Facturas --> 
+    <menuitem id="menu_account_view_in_invoice"
+        name="Facturas"
+        action="action_move_in_invoice_type"
+        parent="account.menu_finance_payables"
+        sequence="1"/>
+
+    <!-- MENU Facturacion/Importar  -->
     <menuitem id="menu_import" name="Importar" parent="account.menu_finance" sequence="10">
-
+    
+        <!-- MENU Facturacion/Importar/Compras  -->
         <menuitem name="Compras" sequence="1" 
             id="menu_import_purchases" action="action_move_in_invoice_type" />
         
+        <!-- MENU Facturacion/Importar/Ventas  -->
         <menuitem name="Ventas" sequence="2"
-            id="menu_import_sales" action="action_move_in_invoice_type" />
+            id="menu_import_sales" action="action_afip_import_sale_wizard" />
         
+        <!-- MENU Facturacion/Importar  -->
         <menuitem name="Importar AFIP" sequence="3"
             id="menu_import_afip" action="action_arba_afip_upload"/>
 
+    </menuitem>
+
+    <!-- MENU Facturacion/Impuestos  -->
+    <menuitem id="menu_taxes" name="Impuestos" parent="account.menu_finance" sequence="11">
+
+        <!-- MENU Facturacion/Impuestos/IIBB -->
+        <menuitem id="menu_taxes_iibb" name="Ingresos Brutos" sequence="1">
+        
+            <!-- MENU Facturacion/Impuestos/IIBB/ARBA  -->
+            <menuitem name="DD.JJ. ARBA" sequence="1"
+                id="menu_taxes_iibb_arba" action="action_iibb_arba_wizard"/>
+
+        </menuitem>
     </menuitem>
 
 </odoo>
