--- a/wizard/arba_afip_views.xml
+++ b/wizard/arba_afip_views.xml
@@ -27,7 +27,7 @@
                                 <field name="pos_number" edit="false" />
                                 <field name="invoice_number" edit="false" />
                                 <field name="taxed_amount" />
-                                <field name="untaxed_amount" optional="hide" />
+                                <field name="untaxed_amount" optional="show" />
                                 <field name="excempt_amount" optional="hide" />
                                 <field name="iva" />
                                 <field name="percepcion_iibb" />
@@ -53,7 +53,9 @@
                 <footer>
                     <field name="notes" />
                     <separator />
+                    
                     <button name="compute_sheet" string="Cargar" type="object" class="btn-primary"/>
+                    <button name="fix_difference" string="Arreglar Diferencias" type="object" class="btn-primary"/>
                     <button name="generate_data" string="Generar Facturas" type="object" class="btn-primary" />
                     <button string="Cancelar" class="btn-secondary" special="cancel"/>
                 </footer>
