Ajustes en la importacion

--- a/views/firm_views.xml
+++ b/views/firm_views.xml
@@ -57,4 +57,7 @@
     <!-- TODO: no permitir eliminar mensajes enviados -->
     <!-- TODO: disable odoo period digest -->
 
+    <!-- TODO: Asistente para alta de Puntos de Venta -->
+    <!-- TODO: Cuando es obligatorio IVA No Corresponde? -->
+
 </odoo>
