--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -101,7 +101,9 @@
         <!-- MENU Facturacion/Mi Estudio/Emails  -->
         <menuitem name="Emails Enviados" sequence="4" 
             id="menu_firm_email_sent" action="action_firm_email_sent" />
-            
+
+        <!-- TODO: Agregar Calendario (y cumpleaños) -->
+
     </menuitem>
 
     <!-- MENU Facturacion/Importar  -->
@@ -125,7 +127,7 @@
                 id="menu_import_purchases_rg3685" action="action_move_in_invoice_type" /> -->
 
             <menuitem name="[N] Archivo Excel" sequence="4" 
-                id="menu_import_purchases_excel" action="action_move_in_invoice_type" />
+                id="menu_import_purchases_excel" action="action_import_purchases_excel" />
 
         </menuitem>
 
@@ -149,7 +151,7 @@
                 id="menu_import_sale_afip_ws" action="action_wizard_import_sale_pem" />
 
             <menuitem name="[N] Archivo Excel" sequence="6" 
-                id="menu_import_sale_excel" action="action_move_in_invoice_type" />
+                id="menu_import_sale_excel" action="action_import_sale_excel" />
             <!-- 
                 TODO: Proveedor, Fecha Factura/Contable/Vencimiento, Diario, Tipo de doc, Numero de Doc. 
                 Producto, Descripcion, Cuenta, Cantidad, Precio, Impuestos (IVA, IIBB)
