--- a/wizard/afip_import_sales_views.xml
+++ b/wizard/afip_import_sales_views.xml
@@ -16,8 +16,10 @@
                     <field name="invoice_ids" nolabel="1" widget="section_and_note_one2many" options="{'reload_on_button': true}">
                         <tree>
                             <field name="date" edit="false" />
-                            <field name="pos_number" edit="false" />
-                            <field name="invoice_number" edit="false" />
+                            <field name="invoice_display_name" edit="false" />
+                            <!-- <field name="invoice_type" edit="false" /> -->
+                            <!-- <field name="pos_number" edit="false" /> -->
+                            <!-- <field name="invoice_number" edit="false" /> -->
                             <field name="taxed_amount" />
                             <field name="untaxed_amount" optional="hide" />
                             <field name="excempt_amount" optional="hide" />
@@ -38,6 +40,8 @@
                     <field name="notes" />
                     <separator />
                     <button name="parse_sales" string="Cargar" type="object" class="btn-primary" />
+                    <button name="generate_sales" string="Generar Comprobantes" type="object" class="btn-primary" />
+                    <button string="Cancelar" class="btn-secondary" special="cancel"/>
                 </footer>
 
             </form>
